style(description): замечания статического анализа по уточняющей ссылке
Параметр помечен обнуляемым, сборка ссылки вынесена из вложенного тернарника,
в тесте нет ни устаревшего сборщика списка, ни утверждения, истинного на пустом
списке.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MnWpDdNSEFohPZHG6voe6y